Fix hero height on mobile view of search-results page

--- a/themes/evans-lake/sass/_error404.scss
+++ b/themes/evans-lake/sass/_error404.scss
@@ -31,7 +31,7 @@
     }
   }
 
-  .hero-search {
+  .hero-404 {
     height: 30vh;
     margin-bottom: 1rem;
     object-fit: cover;
