--- a/themes/evans-lake/sass/_search.scss
+++ b/themes/evans-lake/sass/_search.scss
@@ -21,18 +21,27 @@
 
   .hero-gradient {
     background: linear-gradient(to bottom, rgba(0, 0, 0, .35) 0%, rgba(0, 0, 0, .35) 100%);
-    height: 80vh;
+    height: 30vh;
     position: absolute;
     width: 100%;
     z-index: 1;
+
+    @include desktop {
+      height: 80vh;
+    }
   }
 
   .hero-search {
-    height: 80vh;
-    margin-bottom: 2rem;
+    height: 30vh;
+    margin-bottom: 1rem;
     object-fit: cover;
     width: 100%;
     z-index: -10;
+
+    @include desktop {
+      height: 80vh;
+      margin-bottom: 2rem;
+    }
   }
 
   article {
